crates/wdl-engine/tests/tasks/task-fail/error.txt
error: task execution failed for task `test`: task process terminated with exit code 1: see the `stdout` and `stderr` files in execution directory `attempts/0/` for task command output

task stderr output (last 10 lines):

  this task is going to fail!

  ┌─ tests/tasks/task-fail/source.wdl:3:6
  │
3 │ task test {
  │      ^^^^ this task failed to execute

